# privateclaw

./: .env.example  .gitignore  README.md  Start PrivateClaw.command
.obsidian/: app.json  appearance.json
.privateclaw/: config.json
.privateclaw/.scripts/: cron_runner.sh  flag.py  pyproject.toml  transcribe.py
.privateclaw/.scripts/privateclaw/: cli.py  config.py  container.py  flag.py  setup.py  transcribe.py
.privateclaw/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
