[project]
name = "privateclaw"
version = "0.2.0"
requires-python = ">=3.10,<3.14"
dependencies = [
    "openai-whisper",
    "pyannote.audio",
    "pytesseract",
    "pymupdf",
    "Pillow",
    "ollama",
    "torchaudio",
    "python-dotenv",
]

[project.scripts]
privateclaw = "privateclaw.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
constraint-dependencies = [
    "torch>=2.0",
    "torchaudio>=2.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
